samples/_failures_safe/1761242661_6dbec1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e319e9d.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_9e319e9d.c:123:5: error: expected identifier at end of input
  123 |     for (int i = 0; i < analyzer->
      |     ^~~
./samples/SAFE/__tmp_9e319e9d.c:123:5: error: expected declaration or statement at end of input
